hphp/hack/test/typecheck/tconst/disallow_access_on_nullable.php
<?hh // strict

class X {
  const type A = ?X;
  const type B = X;
  const type C = X::A::B;
}
